--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KBC</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KBC</title>
+  <meta name="description" content="Cep telefonu sigortası ile telefonunuzu beklenmedik durum ve hasarlara karşı koruyun. En uygun fiyatlar, geniş kapsam ve hızlı işlem garantisi. Hemen başvurun!">
+  <!-- Diğer SEO İyileştirmeleri -->
+  <meta name="keywords" content="kerem bilgehan çıkar, kerem çıkar, bilgehan çıkar, bilgehan">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Kerem Bilgehan Cikar">
+  <meta name="og:title" property="og:title" content="Kerem Bilgehan Çıkar">
+  <meta name="og:description" property="og:description"
+    content="Portfolio website of Kerem Bilgehan Çıkar">
+  <meta name="og:image" property="og:image" content="./src/assets/images/kbc.png">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
