--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="scroll-smooth">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
